--- a/desafios/d009-videos/pag002.html
+++ b/desafios/d009-videos/pag002.html
@@ -13,7 +13,7 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/epDCjksKMok" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
     <a href="https://www.youtube.com/watch?v=epDCjksKMok&list=PLHz_AreHm4dlAnJ_jJtV29RFxnPHDuk9o" target="_blank">
-        <p>Veja o curso completo</p>
+        <p>Veja o curso completo!!</p>
     </a>
 
     <a href="index.html"><img src="imagens/voltar.png" alt=""></a>
